--- a/Calculator_39/src/main/res/values/strings.xml
+++ b/Calculator_39/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Calculator_39</string>
     <string name="result">Result....</string>
     <string name="ans">Ans</string>
     <string name="clr">CLR</string>
